--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" 
+   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
-<head> <title> Tim Schmaljohn   </title> </head>
+<head>
+ <title>blank title </title>
+ <link rel="stylesheet" type="text/css" href="your_style.css" />
+ <link rel="stylesheet" type="text/css" media="print" href="print.css" />
+</head>
 
 <body>
-<div>
-
-	<p>
-		Hello World!
-	</p>
-
-	<p>
-		<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1" height="31" width="88" /></a>
-	</p>
+<h1> Tim Schmaljohn </h1>
+<a href="instruct.biz.uiowa.edu/courses/6k183/tschmalj/resume.html">Resume</a>
 
 
-</div>
 </body>
-</html>
