--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
 <head>
- <title>blank title </title>
- <link rel="stylesheet" type="text/css" href="your_style.css" />
+ <title>Tim Schmaljohn</title>
+ <link rel="stylesheet" type="text/css" href="schmaljohnstyles.css" />
  <link rel="stylesheet" type="text/css" media="print" href="print.css" />
 </head>
 
 <body>
 <h1> Tim Schmaljohn </h1>
-<a href="instruct.biz.uiowa.edu/courses/6k183/tschmalj/resume.html">Resume</a>
-
-
+<div id="header">
+<a href="resume.html">Resume</a>
+</div>
 </body>
+</html>
