--- a/resume.html
+++ b/resume.html
@@ -11,5 +11,8 @@
 </head>
 
 <body>
-<a href="instruct.biz.uiowa.edu/courses/6k183/tschmalj/index.html">Home</a>
+<div id="link">
+<a href="index.html">Home</a>
+</div>
 </body>
+</html>
