--- a/index.html
+++ b/index.html
@@ -10,10 +10,30 @@
  <link rel="stylesheet" type="text/css" media="print" href="print.css" />
 </head>
 
-<body>
+<body
+<div id="content">
 <h1> Tim Schmaljohn </h1>
 <div id="header">
-<a href="resume.html">Resume</a>
+<a href="resume.html">My Resume</a>
+</div>
+<div id="body">
+<h2> About Me </h2>
+<img src="mountain.jpg" alt="Summit of Mount Torrey" title="Summit of Mount Torrey"> 
+<p> I'm Tim Schmaljohn, and this is my website I created for a Software Design and Development project.
+	I enjoy doing anything active, such as: <ul>
+	<li> Running </li>
+	<li> Biking </li>
+	<li> Climbing </li> </ul>
+	and many others.
+	Here is a photo of me at the summit of Mount Torrey, a 14'er (14,000' +) mountain 
+	near Denver, Colorado
+</p>
+<br>
+<img src="hawks.jpg" alt="Some friends and me at the Western Michigan game!" title="Some friends and me at the Western Michigan game!"
+<br><p> Of course I enjoy hanging out with friends as well.  Here is a photo of some friends and me 
+	at a recent Iowa Hawkeyes game.
+	</p>
+</div>
 </div>
 </body>
 </html>
