added/formatted content

--- a/resume.html
+++ b/resume.html
@@ -6,13 +6,71 @@
 
 <head>
  <title>blank title </title>
- <link rel="stylesheet" type="text/css" href="your_style.css" />
+ <link rel="stylesheet" type="text/css" href="resume.css" />
  <link rel="stylesheet" type="text/css" media="print" href="print.css" />
 </head>
 
 <body>
 <div id="link">
 <a href="index.html">Home</a>
+<p>
+<div id="personalinfo">
+<h1>Tim Schmaljohn</h1><br/>
+1200 North Boston Way<br/>
+Coralville, IA 52241<br/>
+(319) 329-5768<br/>
+Tim-Schmaljohn@Uiowa.edu<br/>
+
+
+EDUCATION          The University Of Iowa, Iowa City, IA						        Anticipated May 2014
+		B.B.A : Management Information Systems
+		
+		Kirkwood Community College, Cedar Rapids, IA						             May 2004
+		Associates of Arts: Liberal Arts
+
+
+COMPUTER	Languages:  Java, C#, Visual Basic, HTML
+SKILLS		Operating Systems: Windows XP, Windows 7, Windows 8, Windows SBS, Android
+		Software:  Office, Access, Outlook
+		Hardware:  Laptop repair, desktop repair, network configuration and setup, 
+server configuration/maintenance,	printer repair/configuration, POS systems, 
+data recovery, backup configuration, telephony, A/V, television repair, Dell Desktop and Portable Certification
+
+
+PROFESSIONAL	
+EXPERIENCE
+Field Services Specialist                                                                                                                                                June 2013 - Present
+WorldWide Tech 
+•	Repair wide array of electronics, including Dell, Sony, Vizio, Lexmark, IBM, and others
+•	Work independently, solving any problems onsite with little assistance or supervision
+•	Manage, schedule, and travel to repair calls each day with clients in a 100 mile radius
+
+General Manager							              	            December 2012 – June 2013
+	Corridor Computers, Coralville, IA							
+•	Founded own IT consulting business in North Liberty, Iowa
+•	Managed financials, invoicing, tax built client list and other GM duties
+•	Consulted with residential and small business clients to cater to their specific IT needs
+
+Technician								                            May 2012 – December 2012
+IT Solutions, Iowa City, IA
+•	Monitored and maintained several small to medium business networks		             
+•	Installed/configured satellite and complex Audio/Visual solutions for clients
+•	Installed and configured switches, routers, cabling and other network hardware
+•	Managed backup systems and NAS hardware
+•	Built complex custom solutions for clients, such as networking a sewage system and building a large outdoor wireless array.
+
+Technician                                                                                                                                                              August 2007 – May 2012
+Neo Computers, Iowa City, IA							                   
+•	Cleaned viruses, installed and configured operating systems
+•	Managed data for clients, including redundancy solutions and recovery
+•	Repaired laptops, desktops, and POS machines
+•	Performed light soldering and electrical work on circuit boards
+•	Troubleshot software issues via remote, and telephone, including many proprietary software systems in addition to more mainstream software.
+•	Worked closely with clientele to provide for any unique needs they may have
+
+VOLUNTEER	Coralville Ecumenical Food Pantry
+EXPERIENCE	Reprogrammed Microsoft Access database to comply with HACAP standar
+</p>
 </div>
 </body>
 </html>
