Added resume and formatting

--- a/resume.html
+++ b/resume.html
@@ -13,64 +13,72 @@
 <body>
 <div id="link">
 <a href="index.html">Home</a>
-<p>
+
 <div id="personalinfo">
-<h1>Tim Schmaljohn</h1><br/>
+<h1>Tim Schmaljohn</h1><br/><p>
 1200 North Boston Way<br/>
 Coralville, IA 52241<br/>
 (319) 329-5768<br/>
 Tim-Schmaljohn@Uiowa.edu<br/>
-
-
-EDUCATION          The University Of Iowa, Iowa City, IA						        Anticipated May 2014
-		B.B.A : Management Information Systems
-		
-		Kirkwood Community College, Cedar Rapids, IA						             May 2004
-		Associates of Arts: Liberal Arts
-
-
-COMPUTER	Languages:  Java, C#, Visual Basic, HTML
-SKILLS		Operating Systems: Windows XP, Windows 7, Windows 8, Windows SBS, Android
-		Software:  Office, Access, Outlook
-		Hardware:  Laptop repair, desktop repair, network configuration and setup, 
-server configuration/maintenance,	printer repair/configuration, POS systems, 
-data recovery, backup configuration, telephony, A/V, television repair, Dell Desktop and Portable Certification
-
-
-PROFESSIONAL	
-EXPERIENCE
-Field Services Specialist                                                                                                                                                June 2013 - Present
-WorldWide Tech 
-•	Repair wide array of electronics, including Dell, Sony, Vizio, Lexmark, IBM, and others
-•	Work independently, solving any problems onsite with little assistance or supervision
-•	Manage, schedule, and travel to repair calls each day with clients in a 100 mile radius
-
-General Manager							              	            December 2012 – June 2013
-	Corridor Computers, Coralville, IA							
-•	Founded own IT consulting business in North Liberty, Iowa
-•	Managed financials, invoicing, tax built client list and other GM duties
-•	Consulted with residential and small business clients to cater to their specific IT needs
-
-Technician								                            May 2012 – December 2012
-IT Solutions, Iowa City, IA
-•	Monitored and maintained several small to medium business networks		             
-•	Installed/configured satellite and complex Audio/Visual solutions for clients
-•	Installed and configured switches, routers, cabling and other network hardware
-•	Managed backup systems and NAS hardware
-•	Built complex custom solutions for clients, such as networking a sewage system and building a large outdoor wireless array.
-
-Technician                                                                                                                                                              August 2007 – May 2012
-Neo Computers, Iowa City, IA							                   
-•	Cleaned viruses, installed and configured operating systems
-•	Managed data for clients, including redundancy solutions and recovery
-•	Repaired laptops, desktops, and POS machines
-•	Performed light soldering and electrical work on circuit boards
-•	Troubleshot software issues via remote, and telephone, including many proprietary software systems in addition to more mainstream software.
-•	Worked closely with clientele to provide for any unique needs they may have
-
-VOLUNTEER	Coralville Ecumenical Food Pantry
-EXPERIENCE	Reprogrammed Microsoft Access database to comply with HACAP standar
 </p>
+
+<h3>EDUCATION</h3><p>  The University Of Iowa, Iowa City, IA<br/>
+		B.B.A : Management Information Systems		<br/>
+		</p>
+		<p>
+		Kirkwood Community College, Cedar Rapids, IA<br/>
+		Associates of Arts: Liberal Arts<br/>
+</p>
+
+<h3>COMPUTER SKILLS:</h3><p>	<b>Languages:</b>  Java, C#, Visual Basic, HTML<br/>
+	<b>Operating Systems:</b> Windows XP, Windows 7, Windows 8, Windows SBS, Android<br/>
+		<b>Software:</b>  Office, Access, Outlook<br/>
+		<b>Hardware:</b>  Laptop repair, desktop repair, network configuration and setup, <br/>
+server configuration/maintenance,	printer repair/configuration, POS systems, <br/>
+data recovery, backup configuration, telephony, A/V, television repair,<br/>
+Dell Desktop and Portable Certification<br/>
+</p>
+
+<h3>PROFESSIONAL	
+EXPERIENCE</h3>
+<div id="experience"><p>
+<b>Field Services Specialist at WorldWide Tech</b><br/>
+•	Repair wide array of electronics, including Dell, Sony, Vizio, Lexmark, IBM, and others<br/>
+•	Work independently, solving any problems onsite with little assistance or supervision<br/>
+•	Manage, schedule, and travel to repair calls each day with clients in a 100 mile radius<br/>
+</p>
+<p>
+<b>General Manager at Corridor Computers, Coralville, IA </b><br/>						
+•	Founded own IT consulting business in North Liberty, Iowa<br/>
+•	Managed financials, invoicing, tax built client list and other GM duties<br/>
+•	Consulted with residential and small business clients to cater to their specific IT needs<br/>
+</p>
+<p>
+<b>Technician at IT Solutions, Iowa City, IA</b><br/>
+•	Monitored and maintained several small to medium business networks		 <br/>            
+•	Installed/configured satellite and complex Audio/Visual solutions for clients<br/>
+•	Installed and configured switches, routers, cabling and other network hardware<br/>
+•	Managed backup systems and NAS hardware<br/>
+•	Built complex custom solutions for clients, such as networking a sewage system<br/>
+and building a large outdoor wireless array. <br/>
+</p>
+<p>
+<b>Technician at Neo Computers, Iowa City, IA</b><br/>
+•	Cleaned viruses, installed and configured operating systems<br/>
+•	Managed data for clients, including redundancy solutions and recovery<br/>
+•	Repaired laptops, desktops, and POS machines<br/>
+•	Performed light soldering and electrical work on circuit boards<br/>
+•	Troubleshot software issues via remote, and telephone, including many proprietary<br/>
+ software systems in addition to more mainstream software.<br/>
+•	Worked closely with clientele to provide for any unique needs they may have<br/>
+</p>
+</div>
+
+<h3>VOLUNTEER EXPERIENCE:</h3><p>
+	Coralville Ecumenical Food Pantry:
+	Reprogrammed Microsoft Access database to comply with HACAP standards<br/>
+</p>
+</div>
 </div>
 </body>
 </html>
