additional css work

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 <div id="body">
 <h2> About Me </h2>
 <img src="mountain.jpg" alt="Summit of Mount Torrey" title="Summit of Mount Torrey"/>
-<p> I'm Tim Schmaljohn, and this is my website I created for a Software Design and Development project.
+<p class="bolded"> I'm Tim Schmaljohn, and this is my website I created for a Software Design and Development project.
 	I enjoy doing anything active, such as: </p>
 	<ul>
-	<li> Running </li>
-	<li> Biking </li>
-	<li> Climbing </li> </ul>
-<p> and many others.
+	<li><b> Running</b></li>
+	<li><b>Biking </b></li>
+	<li><b> Climbing </b></li> </ul>
+<p class="bolded"> and many others.
 	Here is a photo of me at the summit of Mount Torrey, a 14'er (14,000' +) mountain 
 	near Denver, Colorado
 </p>
 <br/>
 <img src="hawks.jpg" alt="Some friends and me at the Western Michigan game!" title="Some friends and me at the Western Michigan game!"/>
-<br/><p> Of course I enjoy hanging out with friends as well.  Here is a photo of some friends and me 
+<br/><p class="bolded"> Of course I enjoy hanging out with friends as well.  Here is a photo of some friends and me 
 	at a recent Iowa Hawkeyes game.
 	</p>
 </div>
