--- a/resume.html
+++ b/resume.html
@@ -5,23 +5,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
 <head>
- <title>blank title </title>
- <link rel="stylesheet" type="text/css" href="resume.css" />
+ <title>Resume</title>
+ <link rel="stylesheet" type="text/css" href="schmaljohnstyles.css" />
  <link rel="stylesheet" type="text/css" media="print" href="print.css" />
 </head>
 
 <body>
-<div id="link">
-<a href="index.html">Home</a>
-
+<p>
+<a href="index.html">Home</a></p>
 <div id="personalinfo">
-<h1>Tim Schmaljohn</h1><br/><p>
+<h2>Tim Schmaljohn</h2>
 1200 North Boston Way<br/>
 Coralville, IA 52241<br/>
 (319) 329-5768<br/>
 Tim-Schmaljohn@Uiowa.edu<br/>
-</p>
+</div>
 
+<div id="contents">
 <h3>EDUCATION</h3><p>  The University Of Iowa, Iowa City, IA<br/>
 		B.B.A : Management Information Systems		<br/>
 		</p>
@@ -29,7 +29,6 @@ Tim-Schmaljohn@Uiowa.edu<br/>
 		Kirkwood Community College, Cedar Rapids, IA<br/>
 		Associates of Arts: Liberal Arts<br/>
 </p>
-
 <h3>COMPUTER SKILLS:</h3><p>	<b>Languages:</b>  Java, C#, Visual Basic, HTML<br/>
 	<b>Operating Systems:</b> Windows XP, Windows 7, Windows 8, Windows SBS, Android<br/>
 		<b>Software:</b>  Office, Access, Outlook<br/>
@@ -41,7 +40,7 @@ Dell Desktop and Portable Certification<br/>
 
 <h3>PROFESSIONAL	
 EXPERIENCE</h3>
-<div id="experience"><p>
+<p>
 <b>Field Services Specialist at WorldWide Tech</b><br/>
 •	Repair wide array of electronics, including Dell, Sony, Vizio, Lexmark, IBM, and others<br/>
 •	Work independently, solving any problems onsite with little assistance or supervision<br/>
@@ -78,7 +77,5 @@ and building a large outdoor wireless array. <br/>
 	Coralville Ecumenical Food Pantry:
 	Reprogrammed Microsoft Access database to comply with HACAP standards<br/>
 </p>
-</div>
-</div>
 </body>
 </html>
